--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,9 @@ title: Contact Us
     <ul>
       <li><a href="mailto:president@hsbne.org">Alex Wixted, President</a></li>
       <li><a href="mailto:treasurer@hsbne.org">Jaimyn Mayer, Treasurer</a></li>
-      <li><a href="mailto:secretary@hsbne.org">Michael King, Secretary</a></li>
-      <li><a href="mailto:executive@hsbne.org">Drew Spriggs, Vice President</a></li>
-      <li><a href="mailto:executive@hsbne.org">Stephanie Piper, Patron</a></li>
+      <li><a href="mailto:secretary@hsbne.org">Gabrielle Hewitt, Secretary</a></li>
+      <li><a href="mailto:executive@hsbne.org">Craig Hudson-Taylor, Vice President</a></li>
+      <li><a href="mailto:executive@hsbne.org">Aaron Bycroft, Patron</a></li>
     </ul>
     </p>
     <h4>By phone</h4>
